--- a/angular.json
+++ b/angular.json
@@ -1,9 +1,12 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": false
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "kyc-portal": {
+    "MwareCollegeDreamsWeb": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -17,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/kyc-portal",
+            "outputPath": "dist/MwareCollegeDreamsWeb",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -76,18 +79,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "kyc-portal:build"
+            "browserTarget": "MwareCollegeDreamsWeb:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "kyc-portal:build:production"
+              "browserTarget": "MwareCollegeDreamsWeb:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "kyc-portal:build"
+            "browserTarget": "MwareCollegeDreamsWeb:build"
           }
         },
         "test": {
@@ -124,16 +127,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "kyc-portal:serve"
+            "devServerTarget": "MwareCollegeDreamsWeb:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "kyc-portal:serve:production"
+              "devServerTarget": "MwareCollegeDreamsWeb:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "kyc-portal"
+  "defaultProject": "MwareCollegeDreamsWeb"
 }
