--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/**
+ * Created by Iruobe Akhigbe<iruobeakhigbe@gmail.com>
+**/
+
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
