--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,4 +1,9 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
+
+/**
+ * Created by Iruobe Akhigbe<iruobeakhigbe@gmail.com>
+**/
+
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
