--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,9 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
+            "allowedCommonJsDependencies": [
+              "chart.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/upperlinklogo.jpg",
@@ -33,17 +36,21 @@
               "src/.htaccess"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.min.js",
+//              "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/tether/dist/js/tether.min.js",
               "./node_modules/popper.js/dist/umd/popper.min.js",
               "./node_modules/moment/min/moment.min.js",
               "./node_modules/eonasdan-bootstrap-datetimepicker/src/js/bootstrap-datetimepicker.js",
               "src/assets/js/jquery.dataTables.min.js",
               "src/assets/js/bootstrap-material-design.min.js",
-              "src/assets/js/material-dashboard.js"
+              "src/assets/js/material-dashboard.js",
+              "src/assets/js/material-kit.js"
             ]
           },
           "configurations": {
@@ -64,13 +71,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "15mb",
+                  "maximumError": "15mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "500kb",
+                  "maximumError": "4mb"
                 }
               ]
             }
