--- a/package.json
+++ b/package.json
@@ -15,24 +15,32 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.7",
+    "@angular/cdk": "^11.2.9",
     "@angular/common": "~11.2.7",
     "@angular/compiler": "~11.2.7",
     "@angular/core": "~11.2.7",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.2.7",
+    "@angular/material": "^11.2.9",
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@ng-select/ng-select": "^6.1.0",
     "@types/bootstrap-select": "^1.11.1",
     "@types/datatables.net": "^1.10.13",
     "@types/eonasdan-bootstrap-datetimepicker": "^4.17.26",
     "angular-calendar": "^0.28.2",
+    "chart.js": "2.9.4",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "date-fns": "^2.8.1",
-    "@ng-select/ng-select": "^6.0.0",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "highcharts": "^9.0.1",
+    "highcharts-angular": "^2.10.0",
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
+    "ng-otp-input": "^1.7.7",
+    "ngx-bootstrap": "6.2.0",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.0",
@@ -49,7 +57,7 @@
     "@types/node": "^12.11.1",
     "animate.css": "^3.5.2",
     "balloon-css": "^0.5.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.6.0",
     "bootstrap-notify": "^3.1.3",
     "codelyzer": "^6.0.0",
     "crypto-js": "^3.1.9-1",
